apps/adguard-home/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app adguard-home
spec:
  replicas: 1
  serviceName: *app
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: *app
          image: adguard/adguardhome
          volumeMounts:
            - name: &config-volume adguard-config
              mountPath: /opt/adguardhome/conf
            - name: &work-volume adguard-workdir
              mountPath: /opt/adguardhome/work
      volumes:
        - name: *config-volume
          persistentVolumeClaim:
            claimName: *config-volume
        - name: *work-volume
          persistentVolumeClaim:
            claimName: *work-volume
