apps/adguard-home/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-webui
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: webui
      protocol: TCP
      targetPort: 3000
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.100
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  externalTrafficPolicy: Local
  ports:
    - name: dns
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tls
      protocol: TCP
      port: 853
      targetPort: 853
    - name: dns-quic-1
      protocol: UDP
      port: 853
      targetPort: 853
    - name: dns-quic-2
      protocol: UDP
      port: 784
      targetPort: 784
    - name: dns-quic-3
      protocol: UDP
      port: 8853
      targetPort: 8853
    - name: dns-crypt-1
      protocol: TCP
      port: 5443
      targetPort: 5443
    - name: dns-crypt-2
      protocol: UDP
      port: 5443
      targetPort: 5443
